# boringvpn

./: Cargo.toml  LICENSE  README.md  build.rs
src/: boring.rs  cli.rs  client.rs  crypto.rs  device.rs  main.rs  server.rs  types.rs  utils.rs
src/c/: a.out  tuntap.c
src/device/: mod.rs  tun.rs
src/device_bak/: mod.rs
