[package]
name = "boringvpn"
version = "0.1.0"
authors = ["Attenuation <ouyangjun1999@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.55"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.6"
ring = "0.14.6"
bincode = "1.1.4"
dns-lookup = "*"
mio = "*"
rand ="*"
transient-hashmap = "*"
clap = "*"


[build-dependencies]
cc = "1.0"
